<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_titleAddCard"
        style="@style/TitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin15dp"
        android:layout_marginTop="@dimen/margin15dp"
        android:text="@string/cadastrar_cartao_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include_toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_cardNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin15dp"
        android:layout_marginTop="@dimen/margin40dp"
        android:layout_marginEnd="@dimen/margin15dp"
        android:hint="@string/num_cartao"
        android:textColorHint="@color/gray_light"
        app:boxCollapsedPaddingTop="0dp"
        app:boxStrokeColor="@color/green"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_titleAddCard">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_cardPerson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin15dp"
        android:layout_marginTop="@dimen/margin40dp"
        android:layout_marginEnd="@dimen/margin15dp"
        android:hint="@string/nome_do_titular"
        android:textColorHint="@color/gray_light"
        app:boxStrokeColor="@color/green"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInput_cardNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_cardVenc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin15dp"
        android:layout_marginTop="@dimen/margin40dp"
        android:layout_marginEnd="@dimen/margin15dp"
        android:hint="Vencimento"
        android:textColorHint="@color/gray_light"
        app:boxStrokeColor="@color/green"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toStartOf="@id/textInput_cardCvv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInput_cardPerson">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_cardCvv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin15dp"
        android:layout_marginTop="@dimen/margin40dp"
        android:layout_marginEnd="@dimen/margin15dp"
        android:foregroundTint="#D60F0F"
        android:hint="CVV"
        android:textColorHint="@color/gray_light"
        app:boxBackgroundMode="filled"
        app:boxCollapsedPaddingTop="0dp"
        app:boxStrokeColor="@color/green"
        app:helperTextTextColor="@color/green"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textInput_cardVenc"
        app:layout_constraintTop_toBottomOf="@id/textInput_cardPerson">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonView_SaveCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin15dp"
        android:layout_marginEnd="@dimen/margin15dp"
        android:layout_marginBottom="@dimen/margin15dp"
        android:background="@drawable/button_background"
        android:text="@string/salvar"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>